ghost abre no browser

--- a/Code_Base/deploy-ghost.yml
+++ b/Code_Base/deploy-ghost.yml
@@ -1,3 +1,16 @@
 ---
 # Playbook to deploy Ghost and its components
-# TO DO
+
+- name: DB install and start
+  hosts: localhost 
+  roles:
+      - mysql
+  tags: 
+    - dbinstall
+
+- name: Ghost install and start
+  hosts: localhost
+  roles:
+      - ghost
+  tags:
+    - ghostinstall
