--- a/Code_Base/inventory/gcp.yml
+++ b/Code_Base/inventory/gcp.yml
@@ -17,7 +17,10 @@ all:
   # APP variables
   ghost_ip: <GHOST_SERVICE_IP>     # Needs to be updated
   ghost_port: <GHOST_PORT>         # Needs to be updated
-
-
+  
+  ghost_db_name: ghost
+  ghost_db_user: teste
+  ghost_db_password: "123456"
+  
   # Additional variables
   # ...
