--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -11,3 +11,11 @@
 
 - name: MySQL Deployment
   shell: kubectl apply -f roles/mysql/tasks/mysql-deployment.yml
+
+- name: Updating IP
+  shell: kubectl get svc mysql-service -o jsonpath='{.spec.clusterIP}'
+  register: service_info
+
+- name: Set DB IP
+  set_fact:
+    db_host: "{{ service_info.stdout }}"
