--- a/deploy-ghost.yml
+++ b/deploy-ghost.yml
@@ -14,3 +14,11 @@
       - ghost
   tags:
     - ghostinstall
+
+- name: DataBase Update
+  hosts: localhost
+  roles:
+      - bd_update
+  tags:
+    - bd_update
+      
