--- a/roles/ghost/tasks/main.yml
+++ b/roles/ghost/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Ghost PV
+  shell: kubectl apply -f roles/ghost/tasks/pv.yml
+
+- name: Ghost PVC
+  shell: kubectl apply -f roles/ghost/tasks/ghost-pvc.yml 
+
 - name: Ghost Service
   shell: kubectl apply -f roles/ghost/tasks/ghost-service.yml
 
@@ -13,6 +19,9 @@
 - name: Set Ghost IP
   set_fact:
     ghost_ip: "{{ external_ip.stdout }}"
+
+- name: Print Ghost IP
+  msg: "{{ external_ip.stdout }}"
 
 - name: Configure Ghost
   lineinfile:
@@ -31,7 +40,7 @@
     status_code: 200
   register: result
   until: result.status == 200
-  retries: 5
+  retries: 10
   delay: 10
 
 - name: Add Admin
