--- a/roles/mysql/tasks/mysql-deployment.yml
+++ b/roles/mysql/tasks/mysql-deployment.yml
@@ -35,7 +35,7 @@ spec:
         - containerPort: 3306
         volumeMounts:
         - name: mysql-persistent-storage
-          mountPath: "/usr/share/nginx/html"
+          mountPath: "/mnt/data"
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
