--- a/roles/mysql/tasks/mysql-pvc.yml
+++ b/roles/mysql/tasks/mysql-pvc.yml
@@ -1,13 +1,13 @@
-
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim
+  name: mysql-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
-  storageClassName: manual
+  storageClassName: standard
+
