--- a/roles/ghost/tasks/main.yml
+++ b/roles/ghost/tasks/main.yml
@@ -28,7 +28,7 @@
     export PASS={{ ghost_db_password }}
     export PASS_MAIL={{ mail_password }}
     envsubst < roles/ghost/tasks/ghost-deployment.yml | kubectl apply -f -
-    export PASS=""
+    unset PASS
 
 - name: Waiting for Ghost
   ansible.builtin.uri:
@@ -40,20 +40,9 @@
   retries: 10
   delay: 10
 
-- name: Add Admin
-  shell: kubectl exec {{ mysql_pod }} -c mysql -- mysql --user="teste" --password={{ ghost_db_password }} --database="ghost" --execute="update users set name='ascn', password='\$2b\$10\$eK1eSDuggYcxSlkALF/1Lugmz849DTXAp.nPBXpgW4t/Tl0j2GJVy', email='ascn@example.com', status='active' where id=1;"
-
-- name: Get Ghost Pod
-  shell: kubectl get pod -l app=ghost -o jsonpath='{.items[0].metadata.name}'
+- name: Get MySQL Pod
+  shell: kubectl get pod -l app=mysql -o jsonpath='{.items[0].metadata.name}'
   register: pod_name
 
-- name: Set Ghost Pod
-  lineinfile:
-      dest: inventory/gcp.yml
-      regexp: 'ghost_pod:'
-      line: '  ghost_pod: {{ pod_name.stdout }}'
-      state: present
-
-- name: Set Var
-  set_fact:
-    ghost_pod: "{{ pod_name.stdout }}"
+- name: Add Admin
+  shell: kubectl exec {{ pod_name.stdout }} -c mysql -- mysql --user="teste" --password={{ ghost_db_password }} --database="ghost" --execute="update users set name='ascn', password='\$2b\$10\$eK1eSDuggYcxSlkALF/1Lugmz849DTXAp.nPBXpgW4t/Tl0j2GJVy', email='ascn@example.com', status='active' where id=1;"
