--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,12 +1,6 @@
 ---
-#- name: MySQL PV
-#  shell: kubectl apply -f roles/mysql/tasks/pv.yml
-
 - name: MySQL PVC
   shell: kubectl apply -f roles/mysql/tasks/mysql-pvc.yml 
-
-#- name: MySQL Pod
-#  shell: kubectl apply -f roles/mysql/tasks/mysql-pod.yml 
 
 - name: MySQL Service
   shell: kubectl apply -f roles/mysql/tasks/mysql-service.yml 
@@ -15,29 +9,15 @@
   shell: |
     export PASS={{ ghost_db_password }}
     envsubst < roles/mysql/tasks/mysql-deployment.yml | kubectl apply -f -
-    export PASS=""
+    unset PASS
 
-- name: Get MySQL Pod
-  shell: kubectl get pod -l app=mysql -o jsonpath='{.items[0].metadata.name}'
-  register: pod_name
-  delay: 10
-
-- name: Set MySQL Pod
-  lineinfile:
-      dest: inventory/gcp.yml
-      regexp: 'mysql_pod:'
-      line: '  mysql_pod: {{ pod_name.stdout }}'
-      state: present
-
-- name: Set Var
-  set_fact:
-    mysql_pod: "{{ pod_name.stdout }}"
+- name: Wait for PV
+  pause:
+    seconds: 5
 
 - name: Get MySQL PV
   shell: kubectl get pv -o jsonpath='{.items[0].metadata.name}'
   register: pv_name
-  retries: 10
-  delay: 10
 
 - name: Set Policy
   shell: kubectl patch pv {{ pv_name.stdout }} -p '{"spec":{"persistentVolumeReclaimPolicy":"Retain"}}'
