--- a/roles/monitoring/tasks/main.yml
+++ b/roles/monitoring/tasks/main.yml
@@ -13,3 +13,21 @@
   shell: "gcloud monitoring dashboards create --config-from-file=monit_file.json"
   when: result.stdout == ""
 
+- name: Get First Node
+  shell: kubectl get nodes -o jsonpath='{.items[0].metadata.name}'
+  register: firstNode
+
+- name: Get Second Node
+  shell: kubectl get nodes -o jsonpath='{.items[1].metadata.name}'
+  register: secondNode
+
+- name: Create Agents
+  shell: |
+    :> agents_to_install.csv
+    echo '"projects/ascn-2223-369313/zones/europe-west2-b/instances/{{firstNode.stdout}}","[{""type"":""ops-agent""}]"' >> agents_to_install.csv
+    curl -sSO https://dl.google.com/cloudagents/mass-provision-google-cloud-ops-agents.py
+    python3 mass-provision-google-cloud-ops-agents.py --file agents_to_install.csv
+    :> agents_to_install.csv
+    echo '"projects/ascn-2223-369313/zones/europe-west2-b/instances/{{secondNode.stdout}}","[{""type"":""ops-agent""}]"' >> agents_to_install.csv
+    curl -sSO https://dl.google.com/cloudagents/mass-provision-google-cloud-ops-agents.py
+    python3 mass-provision-google-cloud-ops-agents.py --file agents_to_install.csv
