--- a/test-all.yml
+++ b/test-all.yml
@@ -6,6 +6,8 @@
 - name: Tests
   hosts: localhost
   gather_facts: true
+  vars_files:
+    - secrets.yml
   roles:
     - { role: test_ghost }
 
@@ -16,7 +18,19 @@
 - name: Tests
   hosts: localhost
   gather_facts: yes
+  vars_files:
+    - secrets.yml
   roles:
     - { role: test_ghost }
 
 - import_playbook: undeploy-ghost.yml delete_data='true'
+
+- import_playbook: deploy-ghost.yml
+
+- name: Tests
+  hosts: localhost
+  gather_facts: true
+  vars_files:
+    - secrets.yml
+  roles:
+    - { role: test_ghost }
