--- a/roles/monitoring/tasks/main.yml
+++ b/roles/monitoring/tasks/main.yml
@@ -21,13 +21,18 @@
   shell: kubectl get nodes -o jsonpath='{.items[1].metadata.name}'
   register: secondNode
 
+- name: Delete old files
+  shell: |
+    if test -d google_cloud_ops_agent_provisioning/ ; then rm -r google_cloud_ops_agent_provisioning ; fi
+    if test -f mass-provision-google-cloud-ops-agents.py ; then rm mass-provision-google-cloud-ops-agents.py ; fi
+
 - name: Create Agents
   shell: |
     :> roles/monitoring/templates/agents_to_install.csv
-    echo '"projects/ascn-2223-369313/zones/europe-west2-b/instances/{{firstNode.stdout}}","[{""type"":""ops-agent""}]"' >> roles/monitoring/templates/agents_to_install.csv
+    echo '"projects/{{ gcp_project }}/zones/{{ gcp_zone }}/instances/{{ firstNode.stdout }}","[{""type"":""ops-agent""}]"' >> roles/monitoring/templates/agents_to_install.csv
     curl -sSO https://dl.google.com/cloudagents/mass-provision-google-cloud-ops-agents.py
     python3 mass-provision-google-cloud-ops-agents.py --file roles/monitoring/templates/agents_to_install.csv
     :> roles/monitoring/templates/agents_to_install.csv
-    echo '"projects/ascn-2223-369313/zones/europe-west2-b/instances/{{secondNode.stdout}}","[{""type"":""ops-agent""}]"' >> roles/monitoring/templates/agents_to_install.csv
+    echo '"projects/{{ gcp_project }}/zones/{{ gcp_zone }}/instances/{{ secondNode.stdout }}","[{""type"":""ops-agent""}]"' >> roles/monitoring/templates/agents_to_install.csv
     curl -sSO https://dl.google.com/cloudagents/mass-provision-google-cloud-ops-agents.py
     python3 mass-provision-google-cloud-ops-agents.py --file roles/monitoring/templates/agents_to_install.csv
