--- a/roles/monitoring/templates/monit_file.yml
+++ b/roles/monitoring/templates/monit_file.yml
@@ -1,174 +1,388 @@
 {
-  "displayName": "Ghost Monitoring",
-  "mosaicLayout": {
-    "columns": 12,
-    "tiles": [
+    "dashboardFilters": [
       {
-        "height": 4,
-        "widget": {
-          "title": "VM Instance - CPU utilization [MEAN]",
-          "xyChart": {
-            "chartOptions": {
-              "mode": "COLOR"
-            },
-            "dataSets": [
-              {
-                "minAlignmentPeriod": "60s",
-                "plotType": "LINE",
-                "targetAxis": "Y1",
-                "timeSeriesQuery": {
-                  "timeSeriesFilter": {
-                    "aggregation": {
-                      "alignmentPeriod": "60s",
-                      "perSeriesAligner": "ALIGN_MEAN"
-                    },
-                    "filter": "metric.type=\"compute.googleapis.com/instance/cpu/utilization\" resource.type=\"gce_instance\"",
-                    "secondaryAggregation": {
-                      "alignmentPeriod": "60s"
-                    }
-                  }
-                }
-              }
-            ],
-            "timeshiftDuration": "0s",
-            "yAxis": {
-              "label": "y1Axis",
-              "scale": "LINEAR"
-            }
-          }
-        },
-        "width": 6
+        "filterType": "RESOURCE_LABEL",
+        "labelKey": "cluster",
+        "templateVariable": "Cluster"
       },
       {
-        "height": 4,
-        "widget": {
-          "title": "Processes [MEAN]",
-          "xyChart": {
-            "chartOptions": {
-              "mode": "COLOR"
-            },
-            "dataSets": [
-              {
-                "minAlignmentPeriod": "60s",
-                "plotType": "STACKED_BAR",
-                "targetAxis": "Y1",
-                "timeSeriesQuery": {
-                  "timeSeriesFilter": {
-                    "aggregation": {
-                      "alignmentPeriod": "60s",
-                      "perSeriesAligner": "ALIGN_MEAN"
-                    },
-                    "filter": "metric.type=\"agent.googleapis.com/processes/count_by_state\" resource.type=\"gce_instance\"",
-                    "secondaryAggregation": {
-                      "alignmentPeriod": "60s"
-                    }
-                  }
-                }
-              }
-            ],
-            "timeshiftDuration": "0s",
-            "yAxis": {
-              "label": "y1Axis",
-              "scale": "LINEAR"
-            }
-          }
-        },
-        "width": 6,
-        "xPos": 6
+        "filterType": "RESOURCE_LABEL",
+        "labelKey": "location",
+        "templateVariable": "Location"
       },
       {
-        "height": 2,
-        "widget": {
-          "scorecard": {
-            "sparkChartView": {
-              "sparkChartType": "SPARK_LINE"
-            },
-            "timeSeriesQuery": {
-              "timeSeriesFilter": {
-                "aggregation": {
-                  "alignmentPeriod": "60s",
-                  "crossSeriesReducer": "REDUCE_MAX",
-                  "perSeriesAligner": "ALIGN_MAX"
-                },
-                "filter": "metric.type=\"compute.googleapis.com/instance/disk/max_write_bytes_count\" resource.type=\"gce_instance\""
-              }
-            }
-          },
-          "title": "Peak disk write bytes [MAX]"
-        },
-        "width": 4,
-        "yPos": 10
-      },
-      {
-        "height": 2,
-        "widget": {
-          "scorecard": {
-            "sparkChartView": {
-              "sparkChartType": "SPARK_BAR"
-            },
-            "timeSeriesQuery": {
-              "timeSeriesFilter": {
-                "aggregation": {
-                  "alignmentPeriod": "60s",
-                  "crossSeriesReducer": "REDUCE_MAX",
-                  "perSeriesAligner": "ALIGN_MAX"
-                },
-                "filter": "metric.type=\"compute.googleapis.com/instance/disk/max_write_ops_count\" resource.type=\"gce_instance\""
-              }
-            }
-          },
-          "title": "Peak disk write ops [MAX]"
-        },
-        "width": 4,
-        "yPos": 6
-      },
-      {
-        "height": 2,
-        "widget": {
-          "scorecard": {
-            "sparkChartView": {
-              "sparkChartType": "SPARK_BAR"
-            },
-            "timeSeriesQuery": {
-              "timeSeriesFilter": {
-                "aggregation": {
-                  "alignmentPeriod": "60s",
-                  "crossSeriesReducer": "REDUCE_MAX",
-                  "perSeriesAligner": "ALIGN_MAX"
-                },
-                "filter": "metric.type=\"compute.googleapis.com/instance/disk/max_read_ops_count\" resource.type=\"gce_instance\""
-              }
-            }
-          },
-          "title": "Peak disk read ops [MAX]"
-        },
-        "width": 4,
-        "yPos": 4
-      },
-      {
-        "height": 2,
-        "widget": {
-          "scorecard": {
-            "sparkChartView": {
-              "sparkChartType": "SPARK_LINE"
-            },
-            "timeSeriesQuery": {
-              "timeSeriesFilter": {
-                "aggregation": {
-                  "alignmentPeriod": "60s",
-                  "crossSeriesReducer": "REDUCE_MAX",
-                  "perSeriesAligner": "ALIGN_MAX"
-                },
-                "filter": "metric.type=\"compute.googleapis.com/instance/disk/max_read_bytes_count\" resource.type=\"gce_instance\""
-              }
-            }
-          },
-          "title": "Peak disk read bytes [MAX]"
-        },
-        "width": 4,
-        "yPos": 8
+        "filterType": "RESOURCE_LABEL",
+        "labelKey": "namespace",
+        "templateVariable": "Namespace"
       }
-    ]
-  },
-  "name": "projects/{{gcp_project}}/dashboards/ghost_monitoring"
-}
+    ],
+    "displayName": "Ghost Monitoring",
+    "mosaicLayout": {
+      "columns": 12,
+      "tiles": [
+        {
+          "height": 4,
+          "widget": {
+            "title": "Percentagem de utilização do CPU pelos Nodos",
+            "xyChart": {
+              "chartOptions": {
+                "mode": "COLOR"
+              },
+              "dataSets": [
+                {
+                  "minAlignmentPeriod": "60s",
+                  "plotType": "STACKED_AREA",
+                  "targetAxis": "Y1",
+                  "timeSeriesQuery": {
+                    "timeSeriesFilter": {
+                      "aggregation": {
+                        "alignmentPeriod": "60s",
+                        "perSeriesAligner": "ALIGN_MEAN"
+                      },
+                      "filter": "metric.type=\"compute.googleapis.com/instance/cpu/utilization\" resource.type=\"gce_instance\"",
+                      "secondaryAggregation": {
+                        "alignmentPeriod": "60s"
+                      }
+                    }
+                  }
+                }
+              ],
+              "timeshiftDuration": "0s",
+              "yAxis": {
+                "label": "y1Axis",
+                "scale": "LINEAR"
+              }
+            }
+          },
+          "width": 6,
+          "yPos": 3
+        },
+        {
+          "height": 4,
+          "widget": {
+            "title": "Utilização do disco pelos Nodos",
+            "xyChart": {
+              "chartOptions": {
+                "mode": "COLOR"
+              },
+              "dataSets": [
+                {
+                  "minAlignmentPeriod": "60s",
+                  "plotType": "STACKED_AREA",
+                  "targetAxis": "Y1",
+                  "timeSeriesQuery": {
+                    "timeSeriesFilter": {
+                      "aggregation": {
+                        "alignmentPeriod": "60s",
+                        "perSeriesAligner": "ALIGN_MEAN"
+                      },
+                      "filter": "metric.type=\"agent.googleapis.com/disk/percent_used\" resource.type=\"gce_instance\"",
+                      "secondaryAggregation": {
+                        "alignmentPeriod": "60s"
+                      }
+                    }
+                  }
+                }
+              ],
+              "timeshiftDuration": "0s",
+              "yAxis": {
+                "label": "y1Axis",
+                "scale": "LINEAR"
+              }
+            }
+          },
+          "width": 6,
+          "yPos": 7
+        },
+        {
+          "height": 4,
+          "widget": {
+            "title": "Percentagem de memória utilizada pelos Nodos",
+            "xyChart": {
+              "chartOptions": {
+                "mode": "COLOR"
+              },
+              "dataSets": [
+                {
+                  "minAlignmentPeriod": "60s",
+                  "plotType": "LINE",
+                  "targetAxis": "Y1",
+                  "timeSeriesQuery": {
+                    "timeSeriesFilter": {
+                      "aggregation": {
+                        "alignmentPeriod": "60s",
+                        "perSeriesAligner": "ALIGN_MEAN"
+                      },
+                      "filter": "metric.type=\"agent.googleapis.com/memory/percent_used\" resource.type=\"gce_instance\"",
+                      "secondaryAggregation": {
+                        "alignmentPeriod": "60s"
+                      }
+                    }
+                  }
+                }
+              ],
+              "timeshiftDuration": "0s",
+              "yAxis": {
+                "label": "y1Axis",
+                "scale": "LINEAR"
+              }
+            }
+          },
+          "width": 6,
+          "xPos": 6,
+          "yPos": 7
+        },
+        {
+          "height": 1,
+          "widget": {
+            "text": {
+              "format": "MARKDOWN"
+            },
+            "title": "Monitorização global"
+          },
+          "width": 12
+        },
+        {
+          "height": 1,
+          "widget": {
+            "text": {
+              "format": "MARKDOWN"
+            },
+            "title": "Virtual Machine do Ghost e Base de Dados"
+          },
+          "width": 12,
+          "yPos": 15
+        },
+        {
+          "height": 4,
+          "widget": {
+            "title": "VM Instance - CPU utilization [MEAN]",
+            "xyChart": {
+              "chartOptions": {
+                "mode": "COLOR"
+              },
+              "dataSets": [
+                {
+                  "minAlignmentPeriod": "60s",
+                  "plotType": "LINE",
+                  "targetAxis": "Y1",
+                  "timeSeriesQuery": {
+                    "timeSeriesFilter": {
+                      "aggregation": {
+                        "alignmentPeriod": "60s",
+                        "perSeriesAligner": "ALIGN_MEAN"
+                      },
+                      "filter": "metric.type=\"compute.googleapis.com/instance/cpu/utilization\" resource.type=\"gce_instance\"",
+                      "secondaryAggregation": {
+                        "alignmentPeriod": "60s"
+                      }
+                    }
+                  }
+                }
+              ],
+              "timeshiftDuration": "0s",
+              "yAxis": {
+                "label": "y1Axis",
+                "scale": "LINEAR"
+              }
+            }
+          },
+          "width": 6,
+          "yPos": 16
+        },
+        {
+          "height": 4,
+          "widget": {
+            "title": "Memória em bytes utilizada pelos Nodos",
+            "xyChart": {
+              "chartOptions": {
+                "mode": "COLOR"
+              },
+              "dataSets": [
+                {
+                  "minAlignmentPeriod": "60s",
+                  "plotType": "LINE",
+                  "targetAxis": "Y1",
+                  "timeSeriesQuery": {
+                    "timeSeriesFilter": {
+                      "aggregation": {
+                        "alignmentPeriod": "60s",
+                        "perSeriesAligner": "ALIGN_MEAN"
+                      },
+                      "filter": "metric.type=\"kubernetes.io/node/memory/used_bytes\" resource.type=\"k8s_node\"",
+                      "secondaryAggregation": {
+                        "alignmentPeriod": "60s"
+                      }
+                    }
+                  }
+                }
+              ],
+              "timeshiftDuration": "0s",
+              "yAxis": {
+                "label": "y1Axis",
+                "scale": "LINEAR"
+              }
+            }
+          },
+          "width": 6,
+          "xPos": 6,
+          "yPos": 11
+        },
+        {
+          "height": 2,
+          "widget": {
+            "scorecard": {
+              "sparkChartView": {
+                "sparkChartType": "SPARK_LINE"
+              },
+              "timeSeriesQuery": {
+                "timeSeriesFilter": {
+                  "aggregation": {
+                    "alignmentPeriod": "60s",
+                    "perSeriesAligner": "ALIGN_RATE"
+                  },
+                  "filter": "metric.type=\"compute.googleapis.com/instance/network/received_bytes_count\" resource.type=\"gce_instance\"",
+                  "secondaryAggregation": {
+                    "alignmentPeriod": "60s",
+                    "crossSeriesReducer": "REDUCE_MEAN",
+                    "perSeriesAligner": "ALIGN_MEAN"
+                  }
+                }
+              }
+            },
+            "title": "Média de bytes recebidos pelos Nodos"
+          },
+          "width": 5,
+          "xPos": 2,
+          "yPos": 1
+        },
+        {
+          "height": 2,
+          "widget": {
+            "scorecard": {
+              "sparkChartView": {
+                "sparkChartType": "SPARK_LINE"
+              },
+              "timeSeriesQuery": {
+                "timeSeriesFilter": {
+                  "aggregation": {
+                    "alignmentPeriod": "60s",
+                    "perSeriesAligner": "ALIGN_RATE"
+                  },
+                  "filter": "metric.type=\"compute.googleapis.com/instance/network/sent_bytes_count\" resource.type=\"gce_instance\"",
+                  "secondaryAggregation": {
+                    "alignmentPeriod": "60s",
+                    "crossSeriesReducer": "REDUCE_MEAN",
+                    "perSeriesAligner": "ALIGN_MEAN"
+                  }
+                }
+              }
+            },
+            "title": "Média de bytes enviados pelos Nodos"
+          },
+          "width": 5,
+          "xPos": 7,
+          "yPos": 1
+        },
+        {
+          "height": 4,
+          "widget": {
+            "title": "Kubernetes Node - Allocatable cores [SUM], ...",
+            "xyChart": {
+              "chartOptions": {
+                "mode": "COLOR"
+              },
+              "dataSets": [
+                {
+                  "minAlignmentPeriod": "60s",
+                  "plotType": "LINE",
+                  "targetAxis": "Y1",
+                  "timeSeriesQuery": {
+                    "timeSeriesFilter": {
+                      "aggregation": {
+                        "alignmentPeriod": "60s",
+                        "crossSeriesReducer": "REDUCE_SUM",
+                        "perSeriesAligner": "ALIGN_MEAN"
+                      },
+                      "filter": "metric.type=\"kubernetes.io/node/cpu/allocatable_cores\" resource.type=\"k8s_node\"",
+                      "secondaryAggregation": {
+                        "alignmentPeriod": "60s"
+                      }
+                    }
+                  }
+                },
+                {
+                  "minAlignmentPeriod": "60s",
+                  "plotType": "LINE",
+                  "targetAxis": "Y1",
+                  "timeSeriesQuery": {
+                    "timeSeriesFilter": {
+                      "aggregation": {
+                        "alignmentPeriod": "60s",
+                        "crossSeriesReducer": "REDUCE_SUM",
+                        "perSeriesAligner": "ALIGN_MEAN"
+                      },
+                      "filter": "metric.type=\"kubernetes.io/node/cpu/total_cores\" resource.type=\"k8s_node\"",
+                      "secondaryAggregation": {
+                        "alignmentPeriod": "60s"
+                      }
+                    }
+                  }
+                },
+                {
+                  "minAlignmentPeriod": "60s",
+                  "plotType": "LINE",
+                  "targetAxis": "Y1",
+                  "timeSeriesQuery": {
+                    "timeSeriesFilter": {
+                      "aggregation": {
+                        "alignmentPeriod": "60s",
+                        "crossSeriesReducer": "REDUCE_SUM",
+                        "perSeriesAligner": "ALIGN_MEAN"
+                      },
+                      "filter": "metric.type=\"kubernetes.io/container/cpu/request_cores\" resource.type=\"k8s_container\"",
+                      "secondaryAggregation": {
+                        "alignmentPeriod": "60s"
+                      }
+                    }
+                  }
+                }
+              ],
+              "timeshiftDuration": "0s",
+              "yAxis": {
+                "label": "y1Axis",
+                "scale": "LINEAR"
+              }
+            }
+          },
+          "width": 6,
+          "xPos": 6,
+          "yPos": 3
+        },
+        {
+          "height": 2,
+          "widget": {
+            "scorecard": {
+              "gaugeView": {
+                "upperBound": 1.0
+              },
+              "timeSeriesQuery": {
+                "timeSeriesFilter": {
+                  "aggregation": {
+                    "alignmentPeriod": "60s",
+                    "crossSeriesReducer": "REDUCE_MEAN",
+                    "perSeriesAligner": "ALIGN_MEAN"
+                  },
+                  "filter": "metric.type=\"compute.googleapis.com/instance_group/size\" resource.type=\"instance_group\""
+                }
+              }
+            },
+            "title": "Nodes"
+          },
+          "width": 2,
+          "yPos": 1
+        }
+      ]
+    },
+    "name": "projects/{{gcp_project}}/dashboards/ghost_monitoring"
+  }
